# night-lang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  functional.txt  goals.txt  ideas.txt
.github/workflows/: main.yml
include/: CMakeLists.txt
include/nightc/: codegen_x64.hpp  generator.hpp  parser.hpp  tokenizer.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  codegen_x64.cpp  generator.cpp  night.cpp  parser.cpp  tokenizer.cpp
src/driver/: CMakeLists.txt  driver.cpp
src/natvis/: CMakeLists.txt  nightc.natvis
tests/1-minimal/: 1-formatted.night  1-unformatted.night  asm.s  c.s  translated.c
tests/2-unary/: 2-chain.night  2-complement.night  2-multinot.night  2-negation.night  2-not.night  c-complement.s  chain.s  complement.s  multinot.s  negation.s  not.s  translated.c
tests/3-binary/: 3-addition.night  3-allmath.night  3-reversed.night  3-simple-precedence.night
tests/3-system/: c.s  translated.c
tests/4-comments/: 4-basic.night  4-deep.night  4-nested.night  4-weird.night
tests/5-parens/: 5-nested-parens.night  5-simple-parens.night
tests/6-comparisons/: 6-all.night
tests/n-system/: nsm.s
